--- a/Blog/trunk/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
+++ b/Blog/trunk/code/webSite/Areas/onlineSell/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
             n = j;
         }
     }
+        
     <div class="day">
 
         <div class="dayTitle">
@@ -32,9 +33,15 @@
             <a id="homepage1_HomePageDays_DaysList_ctl00_DayList_TitleUrl_0" class="postTitle2" href="/onlineSell/Home/Blog/@listBlog[i].Id">@listBlog[i].Title</a>
         </div>
         <div class="postCon">
-            <div class="c_b_p_desc " style="height:30px">
+            <div class="c_b_p_desc " id="content" style="height:30px">
                 @listBlog[i].Content
             </div>
+            @*<script>
+                var content = document.getElementsByClassName('c_b_p_desc');
+
+                var content = oldContent.replace(/<\/?.+?>/g, "");
+                alert('111');
+            </script>*@
         </div>
         <div class="clear"></div>
         <div class="postDesc">posted @@ @listBlog[i].AddTime.ToString() ycy  @*阅读(1) 评论(0)*@  <a id="blog_nav_myhome" class="menu" href="/onlineSell/Home?catalogid=@listCatalog[n].Id">分类: @listCatalog[n].Name</a>  </div>
