--- a/Blog/trunk/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
+++ b/Blog/trunk/code/webSite/Areas/onlineSell/Views/_LayoutPage1.cshtml
@@ -19,9 +19,7 @@
     <link type="text/css" rel="stylesheet" href="/include/index_files/128442.css">
     <link type="text/css" rel="stylesheet" href="/Content/css/ycy.css">
     <link id="mobile-style" media="only screen and (max-width: 768px)" type="text/css" rel="stylesheet" href="/include/index_files/bundle-CodingLife-mobile.css">
-    <link title="RSS" type="application/rss+xml" rel="alternate" href="http://www.cnblogs.com/ycy0430/rss">
-    <link title="RSD" type="application/rsd+xml" rel="EditURI" href="http://www.cnblogs.com/ycy0430/rsd.xml">
-    <link type="application/wlwmanifest+xml" rel="wlwmanifest" href="http://www.cnblogs.com/ycy0430/wlwmanifest.xml">
+
     <script src="/include/index_files/analytics.js" async=""></script>
     <script src="/include/index_files/jquery.js" type="text/javascript"></script>
     <script type="text/javascript">var currentBlogApp = 'ycy0430', cb_enable_mathjax = false; var isLogined = false;</script>
@@ -36,13 +34,11 @@
 </head>
 <body>
 
-    <a name="top"></a>
 
     <!--done-->
     <div id="home">
         <div id="header">
             <div id="blogTitle">
-                <a id="lnkBlogLogo" href="http://wycy.site/"><img id="blogLogo" src="/include/index_files/logo.gif" alt="返回主页"></a>
 
                 <!--done-->
                 <h1><a id="Header1_HeaderTitle" class="headermaintitle" href="/onlineSell/Home/Index">@config.Name</a></h1>
@@ -58,7 +54,6 @@
                     @foreach (var item in listCatalog)
                     {
                         <li><a id="blog_nav_myhome" class="menu" href="@Url.Action("index", "Home", new { catalogid = item.Id })">@item.Name</a></li>
-                        @*<li><a id="blog_nav_myhome" class="menu" href="/onlineSell/Home/index/@item.Id">@item.Name</a></li>*@
                     }
 
 
@@ -87,20 +82,19 @@
 
 
 
-
         <div id="footer">
             <!--done-->
             <a href="https://github.com/ycy0430" target="_blank" style="color:#ccc">Copyright ©@DateTime.Now.Year ycy</a> 
         </div><!--end: footer -->
     </div><!--end: home 自定义的最大容器 -->
-
+    <!--看板娘-->
     <div class="waifu">
         <div class="waifu-tips"></div>
         <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
         <div class="waifu-tool">
             <span class="fui-home"></span>
             <span class="fui-chat"></span>
-            <span class="fui-eye"></span>
+            @*<span class="fui-eye"></span>*@
             <span class="fui-user"></span>
             <span class="fui-photo"></span>
             <span class="fui-info-circle"></span>
@@ -111,6 +105,7 @@
     <script src="/include/assets/waifu-tips.js"></script>
     <script src="/include/assets/live2d.js"></script>
     <script type="text/javascript">initModel("/include/assets/")</script>
-
+    <!--播放器-->
+    <script src="https://myhkw.cn/player/js/player.js" id="myhk" key="159674402112" m="1"></script>
 </body>
 </html>
